# TermsLang

./: .gitignore  Cargo.toml  ChangeLog.md  Makefile  README.md  build.sh  in.tms  in.txt  out.yaml  test.py  time.sh
docs/: 1.1 TermsLang.md  1.2 GettingStarted.md  1.3 FizzBuzz.md  2.1 Reference.md
examples/: fib.tms  fizzbuzz.tms  import.tms  importfizzbuzz.tms  stdLib.tms  t.tms
internals/: prelude.rs
internals/internals/: int.rs  mod.rs  null.rs  str.rs
src/: cli.rs  errors.rs  lsp.rs  main.rs
src/active_parser/: mod.rs  names.rs
src/ainterpretor/: array_internal.rs  internal_func.rs  mod.rs
src/ainterpretor/internal_funcs/: array_internals.rs  mod.rs
src/avtive_parser/: mod.rs
src/errors/: macros.rs  mod.rs
src/finterpretor/: data.rs  debugger.rs  mod.rs
src/flat_ir/: mod.rs
src/formmatter/: mod.rs
src/interpretor/: garbage_collector.rs  internal_funcs.rs  mod.rs  syntax.rs  value_ptr.rs  var_registry.rs
src/lexer/: mod.rs  syntax.rs  tokens.rs
src/llvm_compiler/: mod.rs
src/parser/: mod.rs  parse_identity.rs  parse_object.rs  parse_operand_block.rs  parse_type.rs
src/terms2rust_transpiler/: mod.rs
src/transpiler/: mod.rs
