workspace = { members = [] }
[package]
repository = "https://github.com/Owen-Dechow/TermsLang"
license-file = "LICENSE.md"
description = "The terms programming language."
name = "termslang"
version = "0.7.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
